--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+.p-wrapper {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 h1,
 h3 {
     text-transform: uppercase;
@@ -25,6 +31,10 @@ h6,
 .h6 {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     color: #404040;
+}
+
+h2 {
+    text-transform: capitalize;
 }
 
 p {
@@ -65,10 +75,7 @@ a {
 .button {
     padding: 15px;
     border-radius: 5px;
-}
-
-.center a {
-    align-items: centerw;
+    margin: 0 auto;
 }
 
 .grey-button {
@@ -95,6 +102,7 @@ a {
 .button,
 .main-nav   {
     text-transform: capitalize;
+    margin: 0 auto;
 }
 
 /* Structure elements */
@@ -127,11 +135,7 @@ nav ul li {
 .banner {
     text-align: center;
     background-image: url(img/bg-1.jpg);
-    margin: 0 auto;
-    background-repeat: no-repeat;
-    padding: 30px;
-    background-size: 100%;
-    transform: translateZ(0px) scale(1);
+    padding: 30px; 
 }
 
 .services {
@@ -159,7 +163,7 @@ nav ul li {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; 
 }
 
 /* Flex Items */
@@ -185,8 +189,6 @@ nav ul li {
     background-color: #F2F2F2;
     margin: 20px 20px 20px 20px;
     flex-basis: 0;
-    text-align: left;
-    text-transform: capitalize;
 }
 
 .col {
@@ -199,7 +201,6 @@ nav ul li {
 
 .col3 {
     max-width: 360px;
-
 }
 
 .col4 {
