--- a/style.css
+++ b/style.css
@@ -2,14 +2,11 @@
     box-sizing: border-box;
 }
 
-.p-wrapper {
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
+html {
+    scroll-behavior: smooth;
+  }
 
-h1,
-h3 {
+h1, h3 {
     text-transform: uppercase;
     padding: 15px;
     color: white;
@@ -17,18 +14,11 @@ h3 {
     text-shadow: 2px 2px black;
 }
 
-body,
-p,
-h2,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+h1 {
+    margin-top: 10rem;
+}
+
+body, p, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     color: #404040;
 }
@@ -39,9 +29,6 @@ h2 {
 
 p {
     padding: 15px;
-}
-
-body {
     margin: 0;
 }
 
@@ -50,6 +37,7 @@ a {
 }
 
 /* Text color */
+
 .grey-text h2 {
     color: #666666;
     padding: 15px;
@@ -73,9 +61,12 @@ a {
 /* button colors */
 
 .button {
-    padding: 15px;
+    padding: 15px 30px;
     border-radius: 5px;
-    margin: 0 auto;
+    display: inline-block;
+    margin: 30px;
+    font-size: 1.2rem;
+    text-transform: capitalize;
 }
 
 .grey-button {
@@ -99,27 +90,33 @@ a {
     background-color: #1686C1;
 }
 
-.button,
-.main-nav   {
+.main-nav {
     text-transform: capitalize;
-    margin: 0 auto;
+    margin: 8px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 /* Structure elements */
 
 .main-nav a {
-    border: white solid 1px;
+    border: #646D7C solid 0.5px;
     color: white;
-    padding: 10px 20px;
+    padding: 15px 25px;
+    font-size: 1.2rem;
+    margin: 10px -10px;
 }
 
-.main-nav a:hover,
-.main-nav a:active {
+.main-nav a:hover, .main-nav a:active {
     background-color: #49505F;
 }
 
 header {
     background-color: #383E4C;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 
 .footer {
@@ -130,12 +127,20 @@ nav ul li {
     margin: 20px;
 }
 
+.center {
+    text-align: center;
+}
+
 /* background images sections */
 
 .banner {
     text-align: center;
     background-image: url(img/bg-1.jpg);
-    padding: 30px; 
+    padding: 30px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 600px;
+    background-attachment: fixed;
 }
 
 .services {
@@ -145,6 +150,7 @@ nav ul li {
     background-repeat: no-repeat;
     padding: 30px;
     background-size: 100%;
+    background-attachment: fixed;
 }
 
 .contact {
@@ -154,17 +160,19 @@ nav ul li {
     background-repeat: no-repeat;
     padding: 30px;
     background-size: 100%;
+    background-attachment: fixed;
 }
 
-.parallax {
+/* .parallax {
     height: 500px;
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+
+/* background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
-}
+} */
 
 /* Flex Items */
 
@@ -173,7 +181,6 @@ nav ul li {
     margin: 0 auto;
 }
 
-.main-nav,
 .column-layout {
     display: flex;
     flex-wrap: wrap;
@@ -181,10 +188,7 @@ nav ul li {
     margin: 0;
 }
 
-.col,
-.col2,
-.col3,
-.col4 {
+.col, .col2, .col3, .col4 {
     flex: 1;
     background-color: #F2F2F2;
     margin: 20px 20px 20px 20px;
@@ -207,8 +211,18 @@ nav ul li {
     max-width: 260px;
 }
 
+/* Fixed button */
 
+.fixed-button {
+    position: fixed;
+    bottom: 3vh;
+    right: 2vw;
+}
 
+/* scroll anchor */
 
-/* Testing */
-
+#scroll-anchor-features, #scroll-anchor-services, #scroll-anchor-contact {
+    display: block;
+    position: relative;
+    top: -78px;
+}
