--- a/style.css
+++ b/style.css
@@ -4,18 +4,19 @@
 
 html {
     scroll-behavior: smooth;
-  }
+}
 
 h1, h3 {
     text-transform: uppercase;
-    padding: 15px;
+    padding: 5px;
     color: white;
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     text-shadow: 2px 2px black;
 }
 
 h1 {
-    margin-top: 10rem;
+    margin-top: 15rem;
+    font-size: 4rem;
 }
 
 body, p, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -90,25 +91,35 @@ a {
     background-color: #1686C1;
 }
 
+/* Structure elements */
+
 .main-nav {
     text-transform: capitalize;
     margin: 8px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    text-align: center;
 }
 
-/* Structure elements */
+.none {
+    display: none;
+}
 
 .main-nav a {
-    border: #646D7C solid 0.5px;
+    
     color: white;
-    padding: 15px 25px;
+    padding: 15px 15px;
     font-size: 1.2rem;
     margin: 10px -10px;
 }
 
-.main-nav a:hover, .main-nav a:active {
+.main-nav a:hover {
+    background-color: #49505F;
+}
+
+nav ul {
+    padding-inline-start: 0px;
+}
+
+.active {
     background-color: #49505F;
 }
 
@@ -135,22 +146,21 @@ nav ul li {
 
 .banner {
     text-align: center;
-    background-image: url(img/bg-1.jpg);
-    padding: 30px;
-    background-size: 100%;
+    background-image: url(img/photo-1542395765-761de4ee9696.jpeg);
+    background-size: auto;
     background-repeat: no-repeat;
     height: 600px;
     background-attachment: fixed;
+    padding: 30px;
 }
 
 .services {
-    background-image: url(img/bg-2.jpg);
+    background-image: url(img/bg-2.jpeg);
     text-align: center;
     margin: 0 auto;
     background-repeat: no-repeat;
-    padding: 30px;
-    background-size: 100%;
-    background-attachment: fixed;
+    background-size: auto;
+    padding: 100px;
 }
 
 .contact {
@@ -158,26 +168,26 @@ nav ul li {
     text-align: center;
     margin: 0 auto;
     background-repeat: no-repeat;
-    padding: 30px;
-    background-size: 100%;
-    background-attachment: fixed;
+    background-size: cover;
+    padding: 100px;
+    color: white;
 }
 
-/* .parallax {
-    height: 500px;
-
-    /* Create the parallax scrolling effect */
-
-/* background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
-} */
+.content-img {
+    max-width: 100%;
+    width: auto;
+    min-width: 455px;
+}
 
 /* Flex Items */
 
 .container {
-    width: 70%;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.container-nav {
+    width: 95%;
     margin: 0 auto;
 }
 
@@ -191,16 +201,17 @@ nav ul li {
 .col, .col2, .col3, .col4 {
     flex: 1;
     background-color: #F2F2F2;
-    margin: 20px 20px 20px 20px;
+    margin: 20px;
     flex-basis: 0;
+    flex-direction: row;
 }
 
 .col {
-    max-width: 1140px;
+    max-width: 455px;
 }
 
 .col2 {
-    max-width: 555px;
+    max-width: 455px;
 }
 
 .col3 {
@@ -225,4 +236,157 @@ nav ul li {
     display: block;
     position: relative;
     top: -78px;
+}
+
+.whiteText {
+    color: white;
+}
+
+/* contact form box */
+
+.container-contact {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.info {
+    display: block;
+    background-color: rgba(255, 255, 255, 0.4);
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #000;
+    width: 96%;
+    min-width: 300px;
+}
+
+textarea, input {
+    display: block;
+    background-color: rgba(255, 255, 255, 0.4);
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    color: #000;
+    width: 100%;
+    min-width: 400px;
+    max-width: 400px;
+}
+
+.mgbtm {
+    margin-bottom: 10px;
+}
+
+textarea::placeholder, input::placeholder {
+    color: inherit;
+}
+
+textarea {
+    height: 100%;
+    max-height: 134px;
+    margin: 10px;
+}
+
+/* menue */
+
+.menue {
+    position: fixed;
+    top: 3vh;
+    right: 2vw;
+    background-color: rgba(255, 255, 255, 0.4);
+    padding: 5px;
+}
+
+.menue-btn {
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+}
+
+/* media queries */
+
+@media (min-width: 600px) {
+    .col2 {
+        max-width: 550px;
+    }
+
+    .col2 img {
+        max-width: 100%;
+        width: auto;
+    }
+}
+
+@media (min-width: 700px) {
+    .menue {
+        display: none;
+    }
+
+    .none {
+        display: contents;
+    } 
+    
+    .main-nav {
+        text-transform: capitalize;
+        margin: 8px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .main-nav a {
+        border: #646D7C solid 0.5px;
+    }
+}
+
+@media (min-width: 800px) {
+    .contact, .services, .banner {
+        background-size: 100%;
+    }
+    .container {
+        width: 70%;
+        margin: 0 auto;
+    }
+    .contact-col {
+        flex: 1;
+        margin: 0 auto;
+        flex-basis: 0;
+        padding: 20px;
+    }
+    .half {
+        max-width: 50%;
+    }
+    textarea {
+        margin: 0;
+    }
+    input, textarea {
+        min-width: 0px;
+        max-width: 100%;
+    }
+    .main-nav a {
+        border: #646D7C solid 0.5px;
+        color: white;
+        padding: 15px 25px;
+        font-size: 1.2rem;
+        margin: 10px -10px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col {
+        max-width: 1140px;
+    }
+    .container-contact {
+        width: 50%;
+    }    
+}
+
+@media (min-width: 1450px) {
+    .contact, .services, .banner {
+        background-size: 100%;
+    }
+    .container {
+        width: 90%;
+        margin: 0 auto;
+    }
 }
